[project]
name = "hisab"
version = "0.1.0"
requires-python = ">=3.12"

# ------------------------------------------------------------------
# Ruff - linter + formatter (replaces flake8, isort, black)
# ------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
	"E", # pycodestyle errors,
	"W", # pycodestyle warnings,
	"F", # pyflakes,
	"I", # isort,
	"UP", # pyupgrade - enforces modern Python syntax
	"B", # flake8-bugbear - catches likely bugs
	"C4", # flake8-comprehensions - cleaner list/dict/set comprehensions
	"SIM", # flake8-simplify
	"TCH", # flake8-type-checking - mioves type-only imports into TYPE_CHECKING blocks
	"ANN", # flake8-annotations -  enforced type hints
	"RUF", # Ruff-specific rules
]
ignore = [
	"ANN201", # missing return type for public functions - mypy handles this
]

[tool.ruff.lint.isort]
known-first-party = ["hisab"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ------------------------------------------------------------------
# mypy - static type checker (strict mode)
# ------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true

plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false # tests are less strict

# ------------------------------------------------------------------
# pytest
# ------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=hisab --cov-report=term-missing"
